exports[`test #extractEntireHiddenToc 1`] = `
Object {
  "byId": Object {
    "113": Object {
      "childNodes": Array [
        "114",
      ],
      "hidden": true,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "113",
      "isLeaf": false,
      "label": "Overview",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "__root__",
    },
    "114": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "114",
      "isLeaf": true,
      "label": "Table of Contents",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "113",
    },
    "115": Object {
      "childNodes": Array [
        "116",
        "117",
        "118",
        "119",
        "120",
        "121",
        "122",
        "123",
      ],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "115",
      "isLeaf": false,
      "label": "Collection 1: Culture and Belonging",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "__root__",
    },
    "116": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "116",
      "isLeaf": true,
      "label": "Collection 1 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "115",
    },
    "117": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/immigrants.xhtml",
      "id": "117",
      "isLeaf": true,
      "label": "Immigrants",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872",
      "parentId": "115",
    },
    "118": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/selena_s_blog.xhtml",
      "id": "118",
      "isLeaf": true,
      "label": "Selena’s Blog: My Experience as a Teen Immigrant",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-5b23866eff924613af22d8a296c61653",
      "parentId": "115",
    },
    "119": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/family_reunion.xhtml",
      "id": "119",
      "isLeaf": true,
      "label": "Family Reunion",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-40c45e21a58c438283bf95dcaa809537",
      "parentId": "115",
    },
    "120": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/immigration_and_migration_in_the_united_states.xhtml",
      "id": "120",
      "isLeaf": true,
      "label": "Immigration and Migration in the United States",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-999b44bf3f03460cbdf41781bd702168",
      "parentId": "115",
    },
    "121": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/what_is_a_culture.xhtml",
      "id": "121",
      "isLeaf": true,
      "label": "What Is a Culture?",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab",
      "parentId": "115",
    },
    "122": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/welcome_to_california.xhtml",
      "id": "122",
      "isLeaf": true,
      "label": "Welcome to California!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d17e58059b0542f1a831de1593127652",
      "parentId": "115",
    },
    "123": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "123",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6ad2f32297f84d1da04638f7e582c374",
      "parentId": "115",
    },
    "__root__": Object {
      "childNodes": Array [
        "113",
        "115",
      ],
      "hidden": false,
      "href": undefined,
      "id": "__root__",
      "isLeaf": false,
      "label": undefined,
      "level": 0,
      "linear": undefined,
      "manifestId": undefined,
      "parentId": undefined,
    },
  },
  "byManifestId": Object {
    "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab": Array [
      "121",
    ],
    "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403": Array [
      "114",
      "113",
    ],
    "item-data-uuid-40c45e21a58c438283bf95dcaa809537": Array [
      "119",
    ],
    "item-data-uuid-5b23866eff924613af22d8a296c61653": Array [
      "118",
    ],
    "item-data-uuid-6ad2f32297f84d1da04638f7e582c374": Array [
      "123",
    ],
    "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872": Array [
      "117",
    ],
    "item-data-uuid-999b44bf3f03460cbdf41781bd702168": Array [
      "120",
    ],
    "item-data-uuid-d17e58059b0542f1a831de1593127652": Array [
      "122",
    ],
    "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc": Array [
      "116",
      "115",
    ],
  },
  "items": Array [
    "114",
    "113",
    "116",
    "117",
    "118",
    "119",
    "120",
    "121",
    "122",
    "123",
    "115",
    "__root__",
  ],
}
`;

exports[`test #extractHiddenItemToc 1`] = `
Object {
  "byId": Object {
    "135": Object {
      "childNodes": Array [
        "136",
      ],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "135",
      "isLeaf": false,
      "label": "Overview",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "__root__",
    },
    "136": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "136",
      "isLeaf": true,
      "label": "Table of Contents",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "135",
    },
    "137": Object {
      "childNodes": Array [
        "138",
        "139",
        "140",
        "141",
        "142",
        "143",
        "144",
        "145",
      ],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "137",
      "isLeaf": false,
      "label": "Collection 1: Culture and Belonging",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "__root__",
    },
    "138": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "138",
      "isLeaf": true,
      "label": "Collection 1 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "137",
    },
    "139": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/immigrants.xhtml",
      "id": "139",
      "isLeaf": true,
      "label": "Immigrants",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872",
      "parentId": "137",
    },
    "140": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/selena_s_blog.xhtml",
      "id": "140",
      "isLeaf": true,
      "label": "Selena’s Blog: My Experience as a Teen Immigrant",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-5b23866eff924613af22d8a296c61653",
      "parentId": "137",
    },
    "141": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/family_reunion.xhtml",
      "id": "141",
      "isLeaf": true,
      "label": "Family Reunion",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-40c45e21a58c438283bf95dcaa809537",
      "parentId": "137",
    },
    "142": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/immigration_and_migration_in_the_united_states.xhtml",
      "id": "142",
      "isLeaf": true,
      "label": "Immigration and Migration in the United States",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-999b44bf3f03460cbdf41781bd702168",
      "parentId": "137",
    },
    "143": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/what_is_a_culture.xhtml",
      "id": "143",
      "isLeaf": true,
      "label": "What Is a Culture?",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab",
      "parentId": "137",
    },
    "144": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/welcome_to_california.xhtml",
      "id": "144",
      "isLeaf": true,
      "label": "Welcome to California!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d17e58059b0542f1a831de1593127652",
      "parentId": "137",
    },
    "145": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "145",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6ad2f32297f84d1da04638f7e582c374",
      "parentId": "137",
    },
    "__root__": Object {
      "childNodes": Array [
        "135",
        "137",
      ],
      "hidden": false,
      "href": undefined,
      "id": "__root__",
      "isLeaf": false,
      "label": undefined,
      "level": 0,
      "linear": undefined,
      "manifestId": undefined,
      "parentId": undefined,
    },
  },
  "byManifestId": Object {
    "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab": Array [
      "143",
    ],
    "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403": Array [
      "136",
      "135",
    ],
    "item-data-uuid-40c45e21a58c438283bf95dcaa809537": Array [
      "141",
    ],
    "item-data-uuid-5b23866eff924613af22d8a296c61653": Array [
      "140",
    ],
    "item-data-uuid-6ad2f32297f84d1da04638f7e582c374": Array [
      "145",
    ],
    "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872": Array [
      "139",
    ],
    "item-data-uuid-999b44bf3f03460cbdf41781bd702168": Array [
      "142",
    ],
    "item-data-uuid-d17e58059b0542f1a831de1593127652": Array [
      "144",
    ],
    "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc": Array [
      "138",
      "137",
    ],
  },
  "items": Array [
    "136",
    "135",
    "138",
    "139",
    "140",
    "141",
    "142",
    "143",
    "144",
    "145",
    "137",
    "__root__",
  ],
}
`;

exports[`test #extractHiddenSectionToc 1`] = `
Object {
  "byId": Object {
    "124": Object {
      "childNodes": Array [
        "125",
      ],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "124",
      "isLeaf": false,
      "label": "Overview",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "__root__",
    },
    "125": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "125",
      "isLeaf": true,
      "label": "Table of Contents",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "124",
    },
    "126": Object {
      "childNodes": Array [
        "127",
        "128",
        "129",
        "130",
        "131",
        "132",
        "133",
        "134",
      ],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "126",
      "isLeaf": false,
      "label": "Collection 1: Culture and Belonging",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "__root__",
    },
    "127": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "127",
      "isLeaf": true,
      "label": "Collection 1 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "126",
    },
    "128": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/immigrants.xhtml",
      "id": "128",
      "isLeaf": true,
      "label": "Immigrants",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872",
      "parentId": "126",
    },
    "129": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/selena_s_blog.xhtml",
      "id": "129",
      "isLeaf": true,
      "label": "Selena’s Blog: My Experience as a Teen Immigrant",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-5b23866eff924613af22d8a296c61653",
      "parentId": "126",
    },
    "130": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/family_reunion.xhtml",
      "id": "130",
      "isLeaf": true,
      "label": "Family Reunion",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-40c45e21a58c438283bf95dcaa809537",
      "parentId": "126",
    },
    "131": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/immigration_and_migration_in_the_united_states.xhtml",
      "id": "131",
      "isLeaf": true,
      "label": "Immigration and Migration in the United States",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-999b44bf3f03460cbdf41781bd702168",
      "parentId": "126",
    },
    "132": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/what_is_a_culture.xhtml",
      "id": "132",
      "isLeaf": true,
      "label": "What Is a Culture?",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab",
      "parentId": "126",
    },
    "133": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/welcome_to_california.xhtml",
      "id": "133",
      "isLeaf": true,
      "label": "Welcome to California!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d17e58059b0542f1a831de1593127652",
      "parentId": "126",
    },
    "134": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "134",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6ad2f32297f84d1da04638f7e582c374",
      "parentId": "126",
    },
    "__root__": Object {
      "childNodes": Array [
        "124",
        "126",
      ],
      "hidden": false,
      "href": undefined,
      "id": "__root__",
      "isLeaf": false,
      "label": undefined,
      "level": 0,
      "linear": undefined,
      "manifestId": undefined,
      "parentId": undefined,
    },
  },
  "byManifestId": Object {
    "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab": Array [
      "132",
    ],
    "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403": Array [
      "125",
      "124",
    ],
    "item-data-uuid-40c45e21a58c438283bf95dcaa809537": Array [
      "130",
    ],
    "item-data-uuid-5b23866eff924613af22d8a296c61653": Array [
      "129",
    ],
    "item-data-uuid-6ad2f32297f84d1da04638f7e582c374": Array [
      "134",
    ],
    "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872": Array [
      "128",
    ],
    "item-data-uuid-999b44bf3f03460cbdf41781bd702168": Array [
      "131",
    ],
    "item-data-uuid-d17e58059b0542f1a831de1593127652": Array [
      "133",
    ],
    "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc": Array [
      "127",
      "126",
    ],
  },
  "items": Array [
    "125",
    "124",
    "127",
    "128",
    "129",
    "130",
    "131",
    "132",
    "133",
    "134",
    "126",
    "__root__",
  ],
}
`;

exports[`test #extractHiddenSingleItemToc 1`] = `
Object {
  "byId": Object {
    "146": Object {
      "childNodes": Array [
        "147",
      ],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "146",
      "isLeaf": false,
      "label": "Overview",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "__root__",
    },
    "147": Object {
      "childNodes": Array [],
      "hidden": true,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "147",
      "isLeaf": true,
      "label": "Table of Contents",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "146",
    },
    "__root__": Object {
      "childNodes": Array [
        "146",
      ],
      "hidden": false,
      "href": undefined,
      "id": "__root__",
      "isLeaf": false,
      "label": undefined,
      "level": 0,
      "linear": undefined,
      "manifestId": undefined,
      "parentId": undefined,
    },
  },
  "byManifestId": Object {
    "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403": Array [
      "147",
      "146",
    ],
  },
  "items": Array [
    "147",
    "146",
    "__root__",
  ],
}
`;

exports[`test #extractNestedToc 1`] = `
Object {
  "byId": Object {
    "100": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/dear_anne.xhtml",
      "id": "100",
      "isLeaf": true,
      "label": "Dear Anne",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-74687195b0fb413bba6b9ca5d8aa3cec",
      "parentId": "95",
    },
    "101": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/seven_reasons_to_keep_a_diary.xhtml",
      "id": "101",
      "isLeaf": true,
      "label": "Seven Reasons to Keep a Diary",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-757f293b2be647deaa1c5291da00413e",
      "parentId": "95",
    },
    "102": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/the_legacy_lives_on.xhtml",
      "id": "102",
      "isLeaf": true,
      "label": "The Legacy Lives On",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-f7923d60c5894cc999346a9f2c8f5ae7",
      "parentId": "95",
    },
    "103": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/anne_frank_s_legacy_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "103",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-101710cd602a4fcfa90108c5c0347df7",
      "parentId": "95",
    },
    "104": Object {
      "childNodes": Array [
        "105",
        "106",
        "107",
        "108",
        "109",
        "110",
        "111",
        "112",
      ],
      "hidden": false,
      "href": "s9ml/the_value_of_work/the_value_of_work_opener.xhtml",
      "id": "104",
      "isLeaf": false,
      "label": "Collection 6: The Value of Work",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-8fc059832a1f4c64be19490536ebc955",
      "parentId": "__root__",
    },
    "105": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/the_value_of_work_opener.xhtml",
      "id": "105",
      "isLeaf": true,
      "label": "Collection 6 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-8fc059832a1f4c64be19490536ebc955",
      "parentId": "104",
    },
    "106": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/i_hear_america_singing.xhtml",
      "id": "106",
      "isLeaf": true,
      "label": "I Hear America Singing",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-cc1ee917649f4f55855784812d45ef9d",
      "parentId": "104",
    },
    "107": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/dawn_to_dusk_a_child_s_workday.xhtml",
      "id": "107",
      "isLeaf": true,
      "label": "Dawn to Dusk: A Child\'s Workday",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3a07ddda3070483e99e2b20349853c76",
      "parentId": "104",
    },
    "108": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/the_conduit_mouse.xhtml",
      "id": "108",
      "isLeaf": true,
      "label": "The Conduit Mouse",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-bda8bcd0fdaa4c26be8914772d6c84ec",
      "parentId": "104",
    },
    "109": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/harnessing_the_wind.xhtml",
      "id": "109",
      "isLeaf": true,
      "label": "Harnessing the Wind",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-589d9984380e4568b1eb5710e6e81ca2",
      "parentId": "104",
    },
    "110": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/weird_jobs_around_the_world.xhtml",
      "id": "110",
      "isLeaf": true,
      "label": "Weird Jobs Around the World",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-1695c0869dbf4fc38e255f1d8571b4e5",
      "parentId": "104",
    },
    "111": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/take_a_break_and_other_ways_to_get_more_work_done.xhtml",
      "id": "111",
      "isLeaf": true,
      "label": "Take a Break! and Other Ways to Get More Work Done",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-7841571fa25b470fa9b4158ce0544f87",
      "parentId": "104",
    },
    "112": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/the_value_of_work_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "112",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-ec172a4c778d409da1aec2f5474cc337",
      "parentId": "104",
    },
    "57": Object {
      "childNodes": Array [
        "58",
      ],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "57",
      "isLeaf": false,
      "label": "Overview",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "__root__",
    },
    "58": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "58",
      "isLeaf": true,
      "label": "Table of Contents",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "57",
    },
    "59": Object {
      "childNodes": Array [
        "60",
        "61",
        "62",
        "63",
        "64",
        "65",
        "66",
        "67",
      ],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "59",
      "isLeaf": false,
      "label": "Collection 1: Culture and Belonging",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "__root__",
    },
    "60": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "60",
      "isLeaf": true,
      "label": "Collection 1 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "59",
    },
    "61": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/immigrants.xhtml",
      "id": "61",
      "isLeaf": true,
      "label": "Immigrants",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872",
      "parentId": "59",
    },
    "62": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/selena_s_blog.xhtml",
      "id": "62",
      "isLeaf": true,
      "label": "Selena’s Blog: My Experience as a Teen Immigrant",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-5b23866eff924613af22d8a296c61653",
      "parentId": "59",
    },
    "63": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/family_reunion.xhtml",
      "id": "63",
      "isLeaf": true,
      "label": "Family Reunion",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-40c45e21a58c438283bf95dcaa809537",
      "parentId": "59",
    },
    "64": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/immigration_and_migration_in_the_united_states.xhtml",
      "id": "64",
      "isLeaf": true,
      "label": "Immigration and Migration in the United States",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-999b44bf3f03460cbdf41781bd702168",
      "parentId": "59",
    },
    "65": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/what_is_a_culture.xhtml",
      "id": "65",
      "isLeaf": true,
      "label": "What Is a Culture?",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab",
      "parentId": "59",
    },
    "66": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/welcome_to_california.xhtml",
      "id": "66",
      "isLeaf": true,
      "label": "Welcome to California!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d17e58059b0542f1a831de1593127652",
      "parentId": "59",
    },
    "67": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "67",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6ad2f32297f84d1da04638f7e582c374",
      "parentId": "59",
    },
    "68": Object {
      "childNodes": Array [
        "69",
        "70",
        "71",
        "72",
        "73",
        "74",
        "75",
        "76",
      ],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_thrill_of_horror_opener.xhtml",
      "id": "68",
      "isLeaf": false,
      "label": "Collection 2: The Thrill of Horror",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-5adbebda98604da48e98180467c64cfd",
      "parentId": "__root__",
    },
    "69": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_thrill_of_horror_opener.xhtml",
      "id": "69",
      "isLeaf": true,
      "label": "Collection 2 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-5adbebda98604da48e98180467c64cfd",
      "parentId": "68",
    },
    "70": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/its_a_mist_its_a_bat_its_a_._._._vampire.xhtml",
      "id": "70",
      "isLeaf": true,
      "label": "It\'s a Mist! It\'s a Bat! It\'s a . . . Vampire!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-9a306d7babff42c084fa63ad29079c97",
      "parentId": "68",
    },
    "71": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/bringing_zombies_to_life.xhtml",
      "id": "71",
      "isLeaf": true,
      "label": "Bringing Zombies to Life",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-7bf20da5723c4a5799c86f97c2fd81b3",
      "parentId": "68",
    },
    "72": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_horror.xhtml",
      "id": "72",
      "isLeaf": true,
      "label": "The Horror!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-47a9d3e21464491cb37d718162b9b520",
      "parentId": "68",
    },
    "73": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_open_window.xhtml",
      "id": "73",
      "isLeaf": true,
      "label": "The Open Window",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-107c288bb253478f8a3094fdd57e00d0",
      "parentId": "68",
    },
    "74": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/eeeek_how_to_scare_your_friends.xhtml",
      "id": "74",
      "isLeaf": true,
      "label": "EEEEK! How to Scare Your Friends",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d15b805965d14521aeb48d93d168b65f",
      "parentId": "68",
    },
    "75": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/scary_history_100_years_of_monster_movies.xhtml",
      "id": "75",
      "isLeaf": true,
      "label": "Scary History: 100 Years of Monster Movies",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-0cf7f56918514bb784e1de2b5e739da1",
      "parentId": "68",
    },
    "76": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_thrill_of_horror_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "76",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3c0bb8315ea14a2bac12ace68240caff",
      "parentId": "68",
    },
    "77": Object {
      "childNodes": Array [
        "78",
        "79",
        "80",
        "81",
        "82",
        "83",
        "84",
        "85",
      ],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/the_move_toward_freedom_opener.xhtml",
      "id": "77",
      "isLeaf": false,
      "label": "Collection 3: The Move Toward Freedom",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-a4f73db0c4ff4464afdbdef6540a1feb",
      "parentId": "__root__",
    },
    "78": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/the_move_toward_freedom_opener.xhtml",
      "id": "78",
      "isLeaf": true,
      "label": "Collection 3 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-a4f73db0c4ff4464afdbdef6540a1feb",
      "parentId": "77",
    },
    "79": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/a_final_escape.xhtml",
      "id": "79",
      "isLeaf": true,
      "label": "A Final Escape",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-ffc2e9c0ab5a404980a1c2686659ab6f",
      "parentId": "77",
    },
    "80": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/frederick_douglass.xhtml",
      "id": "80",
      "isLeaf": true,
      "label": "Frederick Douglass",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-fb124defa1ef4c04a4f79397ae047df0",
      "parentId": "77",
    },
    "81": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/from_the_red_badge_of_courage.xhtml",
      "id": "81",
      "isLeaf": true,
      "label": "from The Red Badge of Courage",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d43a2540b0774b5f973c841873a8b814",
      "parentId": "77",
    },
    "82": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/from_reminiscences_of_my_life_in_camp.xhtml",
      "id": "82",
      "isLeaf": true,
      "label": "from Reminiscences of My Life in Camp",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-14c6d82a58e64980992078f1726dac96",
      "parentId": "77",
    },
    "83": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/freedom_spreads_through_the_states.xhtml",
      "id": "83",
      "isLeaf": true,
      "label": "Freedom Spreads Through the States",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-debfcf17707946f0bf220b7924adaa48",
      "parentId": "77",
    },
    "84": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/the_freedom_train_keeps_rolling.xhtml",
      "id": "84",
      "isLeaf": true,
      "label": "The Freedom Train Keeps Rolling",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d1dc38f40de742b5a24353c05ed1a23e",
      "parentId": "77",
    },
    "85": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/the_move_toward_freedom_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "85",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-ea0242f6d23d4e608c7252ad571882f5",
      "parentId": "77",
    },
    "86": Object {
      "childNodes": Array [
        "87",
        "88",
        "89",
        "90",
        "91",
        "92",
        "93",
        "94",
      ],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/approaching_adulthood_opener.xhtml",
      "id": "86",
      "isLeaf": false,
      "label": "Collection 4: Approaching Adulthood",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-17a19334765e441d848dd98a07d3b583",
      "parentId": "__root__",
    },
    "87": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/approaching_adulthood_opener.xhtml",
      "id": "87",
      "isLeaf": true,
      "label": "Collection 4 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-17a19334765e441d848dd98a07d3b583",
      "parentId": "86",
    },
    "88": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/the_birth_of_the_teenager.xhtml",
      "id": "88",
      "isLeaf": true,
      "label": "The Birth of the Teenager",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-0f371090c0e84cd09a06f868c3fe8efd",
      "parentId": "86",
    },
    "89": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/jack_andraka_teen_scientist.xhtml",
      "id": "89",
      "isLeaf": true,
      "label": "Jack Andraka: Teen Scientist",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-553be8a225384235b06f21698e403a16",
      "parentId": "86",
    },
    "90": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/celeste_s_heart.xhtml",
      "id": "90",
      "isLeaf": true,
      "label": "Celeste\'s Heart",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-cc3d8d64c26046bc92151bfe70170c4c",
      "parentId": "86",
    },
    "91": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/moving_forward_looking_back.xhtml",
      "id": "91",
      "isLeaf": true,
      "label": "Moving Forward, Looking Back",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-e8573f88150047078fdb5bfb083ca5c7",
      "parentId": "86",
    },
    "92": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/old_enough_to_vote.xhtml",
      "id": "92",
      "isLeaf": true,
      "label": "Old Enough to Vote?",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-601228182dbc40e2ba71787be4c05654",
      "parentId": "86",
    },
    "93": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/what_teenagers_need_to_thrive.xhtml",
      "id": "93",
      "isLeaf": true,
      "label": "What Teenagers Need to Thrive",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d11317bd1e344490a568604ca1f4616f",
      "parentId": "86",
    },
    "94": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/approaching_adulthood_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "94",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-0f7b7bf0ed1b4c5c88b86bf81c8e2f92",
      "parentId": "86",
    },
    "95": Object {
      "childNodes": Array [
        "96",
        "97",
        "98",
        "99",
        "100",
        "101",
        "102",
        "103",
      ],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/anne_frank_s_legacy_opener.xhtml",
      "id": "95",
      "isLeaf": false,
      "label": "Collection 5: Anne Frank\'s Legacy",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-ad4d37cb6ecb4c11ada0eafc3c44146f",
      "parentId": "__root__",
    },
    "96": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/anne_frank_s_legacy_opener.xhtml",
      "id": "96",
      "isLeaf": true,
      "label": "Collection 5 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-ad4d37cb6ecb4c11ada0eafc3c44146f",
      "parentId": "95",
    },
    "97": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/from_anne_frank_remembered.xhtml",
      "id": "97",
      "isLeaf": true,
      "label": "from Anne Frank Remembered",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3a5daf183fc34c31822a2b16d13a57ba",
      "parentId": "95",
    },
    "98": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/the_hitler_youth.xhtml",
      "id": "98",
      "isLeaf": true,
      "label": "The Hitler Youth",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-61380725c0dd484593df2807e84cf853",
      "parentId": "95",
    },
    "99": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/a_star_who_s_anne_s_age.xhtml",
      "id": "99",
      "isLeaf": true,
      "label": "A Star Who\'s Anne\'s Age",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-445da3f24e8d49d897c41c17a615bcef",
      "parentId": "95",
    },
    "__root__": Object {
      "childNodes": Array [
        "57",
        "59",
        "68",
        "77",
        "86",
        "95",
        "104",
      ],
      "hidden": false,
      "href": undefined,
      "id": "__root__",
      "isLeaf": false,
      "label": undefined,
      "level": 0,
      "linear": undefined,
      "manifestId": undefined,
      "parentId": undefined,
    },
  },
  "byManifestId": Object {
    "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab": Array [
      "65",
    ],
    "item-data-uuid-0cf7f56918514bb784e1de2b5e739da1": Array [
      "75",
    ],
    "item-data-uuid-0f371090c0e84cd09a06f868c3fe8efd": Array [
      "88",
    ],
    "item-data-uuid-0f7b7bf0ed1b4c5c88b86bf81c8e2f92": Array [
      "94",
    ],
    "item-data-uuid-101710cd602a4fcfa90108c5c0347df7": Array [
      "103",
    ],
    "item-data-uuid-107c288bb253478f8a3094fdd57e00d0": Array [
      "73",
    ],
    "item-data-uuid-14c6d82a58e64980992078f1726dac96": Array [
      "82",
    ],
    "item-data-uuid-1695c0869dbf4fc38e255f1d8571b4e5": Array [
      "110",
    ],
    "item-data-uuid-17a19334765e441d848dd98a07d3b583": Array [
      "87",
      "86",
    ],
    "item-data-uuid-3a07ddda3070483e99e2b20349853c76": Array [
      "107",
    ],
    "item-data-uuid-3a5daf183fc34c31822a2b16d13a57ba": Array [
      "97",
    ],
    "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403": Array [
      "58",
      "57",
    ],
    "item-data-uuid-3c0bb8315ea14a2bac12ace68240caff": Array [
      "76",
    ],
    "item-data-uuid-40c45e21a58c438283bf95dcaa809537": Array [
      "63",
    ],
    "item-data-uuid-445da3f24e8d49d897c41c17a615bcef": Array [
      "99",
    ],
    "item-data-uuid-47a9d3e21464491cb37d718162b9b520": Array [
      "72",
    ],
    "item-data-uuid-553be8a225384235b06f21698e403a16": Array [
      "89",
    ],
    "item-data-uuid-589d9984380e4568b1eb5710e6e81ca2": Array [
      "109",
    ],
    "item-data-uuid-5adbebda98604da48e98180467c64cfd": Array [
      "69",
      "68",
    ],
    "item-data-uuid-5b23866eff924613af22d8a296c61653": Array [
      "62",
    ],
    "item-data-uuid-601228182dbc40e2ba71787be4c05654": Array [
      "92",
    ],
    "item-data-uuid-61380725c0dd484593df2807e84cf853": Array [
      "98",
    ],
    "item-data-uuid-6ad2f32297f84d1da04638f7e582c374": Array [
      "67",
    ],
    "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872": Array [
      "61",
    ],
    "item-data-uuid-74687195b0fb413bba6b9ca5d8aa3cec": Array [
      "100",
    ],
    "item-data-uuid-757f293b2be647deaa1c5291da00413e": Array [
      "101",
    ],
    "item-data-uuid-7841571fa25b470fa9b4158ce0544f87": Array [
      "111",
    ],
    "item-data-uuid-7bf20da5723c4a5799c86f97c2fd81b3": Array [
      "71",
    ],
    "item-data-uuid-8fc059832a1f4c64be19490536ebc955": Array [
      "105",
      "104",
    ],
    "item-data-uuid-999b44bf3f03460cbdf41781bd702168": Array [
      "64",
    ],
    "item-data-uuid-9a306d7babff42c084fa63ad29079c97": Array [
      "70",
    ],
    "item-data-uuid-a4f73db0c4ff4464afdbdef6540a1feb": Array [
      "78",
      "77",
    ],
    "item-data-uuid-ad4d37cb6ecb4c11ada0eafc3c44146f": Array [
      "96",
      "95",
    ],
    "item-data-uuid-bda8bcd0fdaa4c26be8914772d6c84ec": Array [
      "108",
    ],
    "item-data-uuid-cc1ee917649f4f55855784812d45ef9d": Array [
      "106",
    ],
    "item-data-uuid-cc3d8d64c26046bc92151bfe70170c4c": Array [
      "90",
    ],
    "item-data-uuid-d11317bd1e344490a568604ca1f4616f": Array [
      "93",
    ],
    "item-data-uuid-d15b805965d14521aeb48d93d168b65f": Array [
      "74",
    ],
    "item-data-uuid-d17e58059b0542f1a831de1593127652": Array [
      "66",
    ],
    "item-data-uuid-d1dc38f40de742b5a24353c05ed1a23e": Array [
      "84",
    ],
    "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc": Array [
      "60",
      "59",
    ],
    "item-data-uuid-d43a2540b0774b5f973c841873a8b814": Array [
      "81",
    ],
    "item-data-uuid-debfcf17707946f0bf220b7924adaa48": Array [
      "83",
    ],
    "item-data-uuid-e8573f88150047078fdb5bfb083ca5c7": Array [
      "91",
    ],
    "item-data-uuid-ea0242f6d23d4e608c7252ad571882f5": Array [
      "85",
    ],
    "item-data-uuid-ec172a4c778d409da1aec2f5474cc337": Array [
      "112",
    ],
    "item-data-uuid-f7923d60c5894cc999346a9f2c8f5ae7": Array [
      "102",
    ],
    "item-data-uuid-fb124defa1ef4c04a4f79397ae047df0": Array [
      "80",
    ],
    "item-data-uuid-ffc2e9c0ab5a404980a1c2686659ab6f": Array [
      "79",
    ],
  },
  "items": Array [
    "58",
    "57",
    "60",
    "61",
    "62",
    "63",
    "64",
    "65",
    "66",
    "67",
    "59",
    "69",
    "70",
    "71",
    "72",
    "73",
    "74",
    "75",
    "76",
    "68",
    "78",
    "79",
    "80",
    "81",
    "82",
    "83",
    "84",
    "85",
    "77",
    "87",
    "88",
    "89",
    "90",
    "91",
    "92",
    "93",
    "94",
    "86",
    "96",
    "97",
    "98",
    "99",
    "100",
    "101",
    "102",
    "103",
    "95",
    "105",
    "106",
    "107",
    "108",
    "109",
    "110",
    "111",
    "112",
    "104",
    "__root__",
  ],
}
`;

exports[`test #extractToc 1`] = `
Object {
  "byId": Object {
    "1": Object {
      "childNodes": Array [
        "2",
      ],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "1",
      "isLeaf": false,
      "label": "Overview",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "__root__",
    },
    "10": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/welcome_to_california.xhtml",
      "id": "10",
      "isLeaf": true,
      "label": "Welcome to California!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d17e58059b0542f1a831de1593127652",
      "parentId": "3",
    },
    "11": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "11",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6ad2f32297f84d1da04638f7e582c374",
      "parentId": "3",
    },
    "12": Object {
      "childNodes": Array [
        "13",
        "14",
        "15",
        "16",
        "17",
        "18",
        "19",
        "20",
      ],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_thrill_of_horror_opener.xhtml",
      "id": "12",
      "isLeaf": false,
      "label": "Collection 2: The Thrill of Horror",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-5adbebda98604da48e98180467c64cfd",
      "parentId": "__root__",
    },
    "13": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_thrill_of_horror_opener.xhtml",
      "id": "13",
      "isLeaf": true,
      "label": "Collection 2 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-5adbebda98604da48e98180467c64cfd",
      "parentId": "12",
    },
    "14": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/its_a_mist_its_a_bat_its_a_._._._vampire.xhtml",
      "id": "14",
      "isLeaf": true,
      "label": "It\'s a Mist! It\'s a Bat! It\'s a . . . Vampire!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-9a306d7babff42c084fa63ad29079c97",
      "parentId": "12",
    },
    "15": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/bringing_zombies_to_life.xhtml",
      "id": "15",
      "isLeaf": true,
      "label": "Bringing Zombies to Life",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-7bf20da5723c4a5799c86f97c2fd81b3",
      "parentId": "12",
    },
    "16": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_horror.xhtml",
      "id": "16",
      "isLeaf": true,
      "label": "The Horror!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-47a9d3e21464491cb37d718162b9b520",
      "parentId": "12",
    },
    "17": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_open_window.xhtml",
      "id": "17",
      "isLeaf": true,
      "label": "The Open Window",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-107c288bb253478f8a3094fdd57e00d0",
      "parentId": "12",
    },
    "18": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/eeeek_how_to_scare_your_friends.xhtml",
      "id": "18",
      "isLeaf": true,
      "label": "EEEEK! How to Scare Your Friends",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d15b805965d14521aeb48d93d168b65f",
      "parentId": "12",
    },
    "19": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/scary_history_100_years_of_monster_movies.xhtml",
      "id": "19",
      "isLeaf": true,
      "label": "Scary History: 100 Years of Monster Movies",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-0cf7f56918514bb784e1de2b5e739da1",
      "parentId": "12",
    },
    "2": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "2",
      "isLeaf": true,
      "label": "Table of Contents",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "1",
    },
    "20": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_thrill_of_horror/the_thrill_of_horror_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "20",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3c0bb8315ea14a2bac12ace68240caff",
      "parentId": "12",
    },
    "21": Object {
      "childNodes": Array [
        "22",
        "23",
        "24",
        "25",
        "26",
        "27",
        "28",
        "29",
      ],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/the_move_toward_freedom_opener.xhtml",
      "id": "21",
      "isLeaf": false,
      "label": "Collection 3: The Move Toward Freedom",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-a4f73db0c4ff4464afdbdef6540a1feb",
      "parentId": "__root__",
    },
    "22": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/the_move_toward_freedom_opener.xhtml",
      "id": "22",
      "isLeaf": true,
      "label": "Collection 3 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-a4f73db0c4ff4464afdbdef6540a1feb",
      "parentId": "21",
    },
    "23": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/a_final_escape.xhtml",
      "id": "23",
      "isLeaf": true,
      "label": "A Final Escape",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-ffc2e9c0ab5a404980a1c2686659ab6f",
      "parentId": "21",
    },
    "24": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/frederick_douglass.xhtml",
      "id": "24",
      "isLeaf": true,
      "label": "Frederick Douglass",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-fb124defa1ef4c04a4f79397ae047df0",
      "parentId": "21",
    },
    "25": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/from_the_red_badge_of_courage.xhtml",
      "id": "25",
      "isLeaf": true,
      "label": "from The Red Badge of Courage",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d43a2540b0774b5f973c841873a8b814",
      "parentId": "21",
    },
    "26": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/from_reminiscences_of_my_life_in_camp.xhtml",
      "id": "26",
      "isLeaf": true,
      "label": "from Reminiscences of My Life in Camp",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-14c6d82a58e64980992078f1726dac96",
      "parentId": "21",
    },
    "27": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/freedom_spreads_through_the_states.xhtml",
      "id": "27",
      "isLeaf": true,
      "label": "Freedom Spreads Through the States",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-debfcf17707946f0bf220b7924adaa48",
      "parentId": "21",
    },
    "28": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/the_freedom_train_keeps_rolling.xhtml",
      "id": "28",
      "isLeaf": true,
      "label": "The Freedom Train Keeps Rolling",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d1dc38f40de742b5a24353c05ed1a23e",
      "parentId": "21",
    },
    "29": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_move_toward_freedom/the_move_toward_freedom_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "29",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-ea0242f6d23d4e608c7252ad571882f5",
      "parentId": "21",
    },
    "3": Object {
      "childNodes": Array [
        "4",
        "5",
        "6",
        "7",
        "8",
        "9",
        "10",
        "11",
      ],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "3",
      "isLeaf": false,
      "label": "Collection 1: Culture and Belonging",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "__root__",
    },
    "30": Object {
      "childNodes": Array [
        "31",
        "32",
        "33",
        "34",
        "35",
        "36",
        "37",
        "38",
      ],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/approaching_adulthood_opener.xhtml",
      "id": "30",
      "isLeaf": false,
      "label": "Collection 4: Approaching Adulthood",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-17a19334765e441d848dd98a07d3b583",
      "parentId": "__root__",
    },
    "31": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/approaching_adulthood_opener.xhtml",
      "id": "31",
      "isLeaf": true,
      "label": "Collection 4 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-17a19334765e441d848dd98a07d3b583",
      "parentId": "30",
    },
    "32": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/the_birth_of_the_teenager.xhtml",
      "id": "32",
      "isLeaf": true,
      "label": "The Birth of the Teenager",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-0f371090c0e84cd09a06f868c3fe8efd",
      "parentId": "30",
    },
    "33": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/jack_andraka_teen_scientist.xhtml",
      "id": "33",
      "isLeaf": true,
      "label": "Jack Andraka: Teen Scientist",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-553be8a225384235b06f21698e403a16",
      "parentId": "30",
    },
    "34": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/celeste_s_heart.xhtml",
      "id": "34",
      "isLeaf": true,
      "label": "Celeste\'s Heart",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-cc3d8d64c26046bc92151bfe70170c4c",
      "parentId": "30",
    },
    "35": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/moving_forward_looking_back.xhtml",
      "id": "35",
      "isLeaf": true,
      "label": "Moving Forward, Looking Back",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-e8573f88150047078fdb5bfb083ca5c7",
      "parentId": "30",
    },
    "36": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/old_enough_to_vote.xhtml",
      "id": "36",
      "isLeaf": true,
      "label": "Old Enough to Vote?",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-601228182dbc40e2ba71787be4c05654",
      "parentId": "30",
    },
    "37": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/what_teenagers_need_to_thrive.xhtml",
      "id": "37",
      "isLeaf": true,
      "label": "What Teenagers Need to Thrive",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d11317bd1e344490a568604ca1f4616f",
      "parentId": "30",
    },
    "38": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/approaching_adulthood/approaching_adulthood_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "38",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-0f7b7bf0ed1b4c5c88b86bf81c8e2f92",
      "parentId": "30",
    },
    "39": Object {
      "childNodes": Array [
        "40",
        "41",
        "42",
        "43",
        "44",
        "45",
        "46",
        "47",
      ],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/anne_frank_s_legacy_opener.xhtml",
      "id": "39",
      "isLeaf": false,
      "label": "Collection 5: Anne Frank\'s Legacy",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-ad4d37cb6ecb4c11ada0eafc3c44146f",
      "parentId": "__root__",
    },
    "4": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "4",
      "isLeaf": true,
      "label": "Collection 1 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "3",
    },
    "40": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/anne_frank_s_legacy_opener.xhtml",
      "id": "40",
      "isLeaf": true,
      "label": "Collection 5 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-ad4d37cb6ecb4c11ada0eafc3c44146f",
      "parentId": "39",
    },
    "41": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/from_anne_frank_remembered.xhtml",
      "id": "41",
      "isLeaf": true,
      "label": "from Anne Frank Remembered",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3a5daf183fc34c31822a2b16d13a57ba",
      "parentId": "39",
    },
    "42": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/the_hitler_youth.xhtml",
      "id": "42",
      "isLeaf": true,
      "label": "The Hitler Youth",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-61380725c0dd484593df2807e84cf853",
      "parentId": "39",
    },
    "43": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/a_star_who_s_anne_s_age.xhtml",
      "id": "43",
      "isLeaf": true,
      "label": "A Star Who\'s Anne\'s Age",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-445da3f24e8d49d897c41c17a615bcef",
      "parentId": "39",
    },
    "44": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/dear_anne.xhtml",
      "id": "44",
      "isLeaf": true,
      "label": "Dear Anne",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-74687195b0fb413bba6b9ca5d8aa3cec",
      "parentId": "39",
    },
    "45": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/seven_reasons_to_keep_a_diary.xhtml",
      "id": "45",
      "isLeaf": true,
      "label": "Seven Reasons to Keep a Diary",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-757f293b2be647deaa1c5291da00413e",
      "parentId": "39",
    },
    "46": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/the_legacy_lives_on.xhtml",
      "id": "46",
      "isLeaf": true,
      "label": "The Legacy Lives On",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-f7923d60c5894cc999346a9f2c8f5ae7",
      "parentId": "39",
    },
    "47": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/anne_franks_legacy/anne_frank_s_legacy_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "47",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-101710cd602a4fcfa90108c5c0347df7",
      "parentId": "39",
    },
    "48": Object {
      "childNodes": Array [
        "49",
        "50",
        "51",
        "52",
        "53",
        "54",
        "55",
        "56",
      ],
      "hidden": false,
      "href": "s9ml/the_value_of_work/the_value_of_work_opener.xhtml",
      "id": "48",
      "isLeaf": false,
      "label": "Collection 6: The Value of Work",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-8fc059832a1f4c64be19490536ebc955",
      "parentId": "__root__",
    },
    "49": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/the_value_of_work_opener.xhtml",
      "id": "49",
      "isLeaf": true,
      "label": "Collection 6 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-8fc059832a1f4c64be19490536ebc955",
      "parentId": "48",
    },
    "5": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/immigrants.xhtml",
      "id": "5",
      "isLeaf": true,
      "label": "Immigrants",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872",
      "parentId": "3",
    },
    "50": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/i_hear_america_singing.xhtml",
      "id": "50",
      "isLeaf": true,
      "label": "I Hear America Singing",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-cc1ee917649f4f55855784812d45ef9d",
      "parentId": "48",
    },
    "51": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/dawn_to_dusk_a_child_s_workday.xhtml",
      "id": "51",
      "isLeaf": true,
      "label": "Dawn to Dusk: A Child\'s Workday",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3a07ddda3070483e99e2b20349853c76",
      "parentId": "48",
    },
    "52": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/the_conduit_mouse.xhtml",
      "id": "52",
      "isLeaf": true,
      "label": "The Conduit Mouse",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-bda8bcd0fdaa4c26be8914772d6c84ec",
      "parentId": "48",
    },
    "53": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/harnessing_the_wind.xhtml",
      "id": "53",
      "isLeaf": true,
      "label": "Harnessing the Wind",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-589d9984380e4568b1eb5710e6e81ca2",
      "parentId": "48",
    },
    "54": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/weird_jobs_around_the_world.xhtml",
      "id": "54",
      "isLeaf": true,
      "label": "Weird Jobs Around the World",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-1695c0869dbf4fc38e255f1d8571b4e5",
      "parentId": "48",
    },
    "55": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/take_a_break_and_other_ways_to_get_more_work_done.xhtml",
      "id": "55",
      "isLeaf": true,
      "label": "Take a Break! and Other Ways to Get More Work Done",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-7841571fa25b470fa9b4158ce0544f87",
      "parentId": "48",
    },
    "56": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/the_value_of_work/the_value_of_work_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "56",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-ec172a4c778d409da1aec2f5474cc337",
      "parentId": "48",
    },
    "6": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/selena_s_blog.xhtml",
      "id": "6",
      "isLeaf": true,
      "label": "Selena’s Blog: My Experience as a Teen Immigrant",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-5b23866eff924613af22d8a296c61653",
      "parentId": "3",
    },
    "7": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/family_reunion.xhtml",
      "id": "7",
      "isLeaf": true,
      "label": "Family Reunion",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-40c45e21a58c438283bf95dcaa809537",
      "parentId": "3",
    },
    "8": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/immigration_and_migration_in_the_united_states.xhtml",
      "id": "8",
      "isLeaf": true,
      "label": "Immigration and Migration in the United States",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-999b44bf3f03460cbdf41781bd702168",
      "parentId": "3",
    },
    "9": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/what_is_a_culture.xhtml",
      "id": "9",
      "isLeaf": true,
      "label": "What Is a Culture?",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab",
      "parentId": "3",
    },
    "__root__": Object {
      "childNodes": Array [
        "1",
        "3",
        "12",
        "21",
        "30",
        "39",
        "48",
      ],
      "hidden": false,
      "href": undefined,
      "id": "__root__",
      "isLeaf": false,
      "label": undefined,
      "level": 0,
      "linear": undefined,
      "manifestId": undefined,
      "parentId": undefined,
    },
  },
  "byManifestId": Object {
    "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab": Array [
      "9",
    ],
    "item-data-uuid-0cf7f56918514bb784e1de2b5e739da1": Array [
      "19",
    ],
    "item-data-uuid-0f371090c0e84cd09a06f868c3fe8efd": Array [
      "32",
    ],
    "item-data-uuid-0f7b7bf0ed1b4c5c88b86bf81c8e2f92": Array [
      "38",
    ],
    "item-data-uuid-101710cd602a4fcfa90108c5c0347df7": Array [
      "47",
    ],
    "item-data-uuid-107c288bb253478f8a3094fdd57e00d0": Array [
      "17",
    ],
    "item-data-uuid-14c6d82a58e64980992078f1726dac96": Array [
      "26",
    ],
    "item-data-uuid-1695c0869dbf4fc38e255f1d8571b4e5": Array [
      "54",
    ],
    "item-data-uuid-17a19334765e441d848dd98a07d3b583": Array [
      "31",
      "30",
    ],
    "item-data-uuid-3a07ddda3070483e99e2b20349853c76": Array [
      "51",
    ],
    "item-data-uuid-3a5daf183fc34c31822a2b16d13a57ba": Array [
      "41",
    ],
    "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403": Array [
      "2",
      "1",
    ],
    "item-data-uuid-3c0bb8315ea14a2bac12ace68240caff": Array [
      "20",
    ],
    "item-data-uuid-40c45e21a58c438283bf95dcaa809537": Array [
      "7",
    ],
    "item-data-uuid-445da3f24e8d49d897c41c17a615bcef": Array [
      "43",
    ],
    "item-data-uuid-47a9d3e21464491cb37d718162b9b520": Array [
      "16",
    ],
    "item-data-uuid-553be8a225384235b06f21698e403a16": Array [
      "33",
    ],
    "item-data-uuid-589d9984380e4568b1eb5710e6e81ca2": Array [
      "53",
    ],
    "item-data-uuid-5adbebda98604da48e98180467c64cfd": Array [
      "13",
      "12",
    ],
    "item-data-uuid-5b23866eff924613af22d8a296c61653": Array [
      "6",
    ],
    "item-data-uuid-601228182dbc40e2ba71787be4c05654": Array [
      "36",
    ],
    "item-data-uuid-61380725c0dd484593df2807e84cf853": Array [
      "42",
    ],
    "item-data-uuid-6ad2f32297f84d1da04638f7e582c374": Array [
      "11",
    ],
    "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872": Array [
      "5",
    ],
    "item-data-uuid-74687195b0fb413bba6b9ca5d8aa3cec": Array [
      "44",
    ],
    "item-data-uuid-757f293b2be647deaa1c5291da00413e": Array [
      "45",
    ],
    "item-data-uuid-7841571fa25b470fa9b4158ce0544f87": Array [
      "55",
    ],
    "item-data-uuid-7bf20da5723c4a5799c86f97c2fd81b3": Array [
      "15",
    ],
    "item-data-uuid-8fc059832a1f4c64be19490536ebc955": Array [
      "49",
      "48",
    ],
    "item-data-uuid-999b44bf3f03460cbdf41781bd702168": Array [
      "8",
    ],
    "item-data-uuid-9a306d7babff42c084fa63ad29079c97": Array [
      "14",
    ],
    "item-data-uuid-a4f73db0c4ff4464afdbdef6540a1feb": Array [
      "22",
      "21",
    ],
    "item-data-uuid-ad4d37cb6ecb4c11ada0eafc3c44146f": Array [
      "40",
      "39",
    ],
    "item-data-uuid-bda8bcd0fdaa4c26be8914772d6c84ec": Array [
      "52",
    ],
    "item-data-uuid-cc1ee917649f4f55855784812d45ef9d": Array [
      "50",
    ],
    "item-data-uuid-cc3d8d64c26046bc92151bfe70170c4c": Array [
      "34",
    ],
    "item-data-uuid-d11317bd1e344490a568604ca1f4616f": Array [
      "37",
    ],
    "item-data-uuid-d15b805965d14521aeb48d93d168b65f": Array [
      "18",
    ],
    "item-data-uuid-d17e58059b0542f1a831de1593127652": Array [
      "10",
    ],
    "item-data-uuid-d1dc38f40de742b5a24353c05ed1a23e": Array [
      "28",
    ],
    "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc": Array [
      "4",
      "3",
    ],
    "item-data-uuid-d43a2540b0774b5f973c841873a8b814": Array [
      "25",
    ],
    "item-data-uuid-debfcf17707946f0bf220b7924adaa48": Array [
      "27",
    ],
    "item-data-uuid-e8573f88150047078fdb5bfb083ca5c7": Array [
      "35",
    ],
    "item-data-uuid-ea0242f6d23d4e608c7252ad571882f5": Array [
      "29",
    ],
    "item-data-uuid-ec172a4c778d409da1aec2f5474cc337": Array [
      "56",
    ],
    "item-data-uuid-f7923d60c5894cc999346a9f2c8f5ae7": Array [
      "46",
    ],
    "item-data-uuid-fb124defa1ef4c04a4f79397ae047df0": Array [
      "24",
    ],
    "item-data-uuid-ffc2e9c0ab5a404980a1c2686659ab6f": Array [
      "23",
    ],
  },
  "items": Array [
    "2",
    "1",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
    "11",
    "3",
    "13",
    "14",
    "15",
    "16",
    "17",
    "18",
    "19",
    "20",
    "12",
    "22",
    "23",
    "24",
    "25",
    "26",
    "27",
    "28",
    "29",
    "21",
    "31",
    "32",
    "33",
    "34",
    "35",
    "36",
    "37",
    "38",
    "30",
    "40",
    "41",
    "42",
    "43",
    "44",
    "45",
    "46",
    "47",
    "39",
    "49",
    "50",
    "51",
    "52",
    "53",
    "54",
    "55",
    "56",
    "48",
    "__root__",
  ],
}
`;

exports[`test #extractTocWithPageList 1`] = `
Object {
  "byId": Object {
    "148": Object {
      "childNodes": Array [
        "149",
      ],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "148",
      "isLeaf": false,
      "label": "Overview",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "__root__",
    },
    "149": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/overview/table_of_contents.xhtml",
      "id": "149",
      "isLeaf": true,
      "label": "Table of Contents",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "parentId": "148",
    },
    "150": Object {
      "childNodes": Array [
        "151",
        "152",
        "153",
        "154",
        "155",
        "156",
        "157",
        "158",
      ],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "150",
      "isLeaf": false,
      "label": "Collection 1: Culture and Belonging",
      "level": 1,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "__root__",
    },
    "151": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml",
      "id": "151",
      "isLeaf": true,
      "label": "Collection 1 Opener",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
      "parentId": "150",
    },
    "152": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/immigrants.xhtml",
      "id": "152",
      "isLeaf": true,
      "label": "Immigrants",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872",
      "parentId": "150",
    },
    "153": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/selena_s_blog.xhtml",
      "id": "153",
      "isLeaf": true,
      "label": "Selena’s Blog: My Experience as a Teen Immigrant",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-5b23866eff924613af22d8a296c61653",
      "parentId": "150",
    },
    "154": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/family_reunion.xhtml",
      "id": "154",
      "isLeaf": true,
      "label": "Family Reunion",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-40c45e21a58c438283bf95dcaa809537",
      "parentId": "150",
    },
    "155": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/immigration_and_migration_in_the_united_states.xhtml",
      "id": "155",
      "isLeaf": true,
      "label": "Immigration and Migration in the United States",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-999b44bf3f03460cbdf41781bd702168",
      "parentId": "150",
    },
    "156": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/what_is_a_culture.xhtml",
      "id": "156",
      "isLeaf": true,
      "label": "What Is a Culture?",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab",
      "parentId": "150",
    },
    "157": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/welcome_to_california.xhtml",
      "id": "157",
      "isLeaf": true,
      "label": "Welcome to California!",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-d17e58059b0542f1a831de1593127652",
      "parentId": "150",
    },
    "158": Object {
      "childNodes": Array [],
      "hidden": false,
      "href": "s9ml/culture_and_belonging/culture_and_belonging_copyright_acknowledgments_and_image_credits.xhtml",
      "id": "158",
      "isLeaf": true,
      "label": "Copyright, Acknowledgments, and Image Credits",
      "level": 2,
      "linear": undefined,
      "manifestId": "item-data-uuid-6ad2f32297f84d1da04638f7e582c374",
      "parentId": "150",
    },
    "__root__": Object {
      "childNodes": Array [
        "148",
        "150",
      ],
      "hidden": false,
      "href": undefined,
      "id": "__root__",
      "isLeaf": false,
      "label": undefined,
      "level": 0,
      "linear": undefined,
      "manifestId": undefined,
      "parentId": undefined,
    },
  },
  "byManifestId": Object {
    "item-data-uuid-01eee42463c54f1b945502ebf51ab9ab": Array [
      "156",
    ],
    "item-data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403": Array [
      "149",
      "148",
    ],
    "item-data-uuid-40c45e21a58c438283bf95dcaa809537": Array [
      "154",
    ],
    "item-data-uuid-5b23866eff924613af22d8a296c61653": Array [
      "153",
    ],
    "item-data-uuid-6ad2f32297f84d1da04638f7e582c374": Array [
      "158",
    ],
    "item-data-uuid-6d74e8e547ec455a9c00ebb37cb4a872": Array [
      "152",
    ],
    "item-data-uuid-999b44bf3f03460cbdf41781bd702168": Array [
      "155",
    ],
    "item-data-uuid-d17e58059b0542f1a831de1593127652": Array [
      "157",
    ],
    "item-data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc": Array [
      "151",
      "150",
    ],
  },
  "items": Array [
    "149",
    "148",
    "151",
    "152",
    "153",
    "154",
    "155",
    "156",
    "157",
    "158",
    "150",
    "__root__",
  ],
  "pageList": Object {
    "byId": Object {
      "1": "s9ml/culture_and_belonging/immigrants.xhtml#data-uuid-6d74e8e547ec455a9c00ebb37cb4a872",
      "2": "s9ml/culture_and_belonging/selena_s_blog.xhtml#data-uuid-5b23866eff924613af22d8a296c61653",
      "3": "s9ml/culture_and_belonging/family_reunion.xhtml#data-uuid-40c45e21a58c438283bf95dcaa809537",
      "4": "s9ml/culture_and_belonging/immigration_and_migration_in_the_united_states.xhtml#data-uuid-999b44bf3f03460cbdf41781bd702168",
      "5": "s9ml/culture_and_belonging/what_is_a_culture.xhtml#data-uuid-01eee42463c54f1b945502ebf51ab9ab",
      "6": "s9ml/culture_and_belonging/welcome_to_california.xhtml#data-uuid-d17e58059b0542f1a831de1593127652",
      "appendix": "s9ml/culture_and_belonging/culture_and_belonging_copyright_acknowledgments_and_image_credits.xhtml#data-uuid-6ad2f32297f84d1da04638f7e582c374",
      "i": "s9ml/overview/table_of_contents.xhtml#data-uuid-3b13d68a9f9447fe8bd6f2d7c7ea7403",
      "ii": "s9ml/culture_and_belonging/culture_and_belonging_opener.xhtml#data-uuid-d2a6e8f4db704bae875c9b4c5dc209cc",
    },
    "items": Array [
      "i",
      "ii",
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "appendix",
    ],
  },
}
`;
